# daily-coding

./: README.md
tool/create_new_workspace/: .gitignore  Cargo.toml
tool/create_new_workspace/src/: main.rs
workspace/2024-01-15/: Dockerfile
workspace/2024-01-15_python/: README.md
workspace/2024-01-16/hello_world/: Cargo.toml  Dockerfile
workspace/2024-01-16_rust/hello_world/: README.md
workspace/2024-01-17_ocaml/: README.md
workspace/2024-01-18_ocaml-dune/: README.md
workspace/2024-01-18_ocaml-dune/hello_world/: .gitignore  README.md  dune-project
workspace/2024-01-19_haskell/: README.md  hello.hi
workspace/2024-01-20_typescript/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
workspace/2024-01-20_typescript/src/: index.ts
workspace/2024-01-21_rust-script/hw_script/: Cargo.toml  README.md
workspace/2024-01-21_rust-script/hw_script/src/: main.rs
workspace/2024-01-23_haskell/: .gitignore  LICENSE  README.md  hello-world.cabal
workspace/2024-01-23_haskell/app/: Main.hs
workspace/2024-01-25_rust-array/hw_array/: Cargo.toml
workspace/2024-01-26_ocaml-array/hello_world_list/: .gitignore  README.md  dune-project
workspace/2024-01-26_ocaml-array/hello_world_list/lib/: dune
workspace/2024-01-26_ocaml-array/hello_world_list/test/: dune
workspace/2024-01-31_go/: README.md  go.mod  main.go
workspace/2024-01-31_go/subpkg/: sub1.go
workspace/2024-02-01_julia/: README.md
workspace/2024-02-06_python-array/: main.py
workspace/2024-02-22_SQLite/: Pipfile  README.md
workspace/2024-02-22_SQLite/app/: main.py  test.db
(+1 files in other folders)
